Drag items aligned, bugs

--- a/websiteproject/ffxiv_tools/static/ffxiv_tools/pasture_style.css
+++ b/websiteproject/ffxiv_tools/static/ffxiv_tools/pasture_style.css
@@ -1,5 +1,35 @@
 body {
-    font-family: "myriad pro", sans-serif;
+    font-family: "Droid Sans Mono", sans-serif;
+}
+
+h1 {
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 23px;
+}
+
+h3 {
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 23px;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 23px;
+}
+
+blockquote {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 23px;
+}
+
+pre {
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 23px;
 }
 
 /* Flex box styling for page layout */
@@ -47,7 +77,6 @@ flex-grow: 1;
 .drop-container {
     display: none;
     position: absolute;
-    z-index: 1;
 }
 
 .block-display {
@@ -73,8 +102,29 @@ flex-grow: 1;
     flex-grow: 1;
     border-radius: 8px;
     border: solid 4px;
+    display: flex;
+    align-items: start;
 }
 
 .drag-animal {
     margin: 1px;
+}
+
+.left {
+    flex-basis: 190px;
+    flex-grow: 2;
+}
+
+.center {
+    flex-basis: 85px;
+    flex-grow: 1;
+}
+
+.right {
+    flex-basis: 85px;
+    flex-grow: 1;
+}
+
+table {
+    text-align: left;
 }
